--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title: Yanxiang Wang,test
+title: Jiao Zhao
 description: Applied Geoinformatics, University of Salzburg
 url: https://anganiang.github.io/
 avatar: /me.jpg
